<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <artifactId>EconomyCore</artifactId>
    <packaging>jar</packaging>
    <name>The New Economy Core</name>

    <repositories>
        <repository>
            <id>codemc-releases</id>
            <url>https://repo.codemc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.1.1-jre</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>TNML-CORE</artifactId>
            <version>1.0-SNAPSHOT-16</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>net.tnemc</groupId>
                    <artifactId>TNIL-Core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>net.tnemc</groupId>
            <artifactId>TNIL-Core</artifactId>
            <version>0.1.7.4-Pre-11</version>
            <scope>compile</scope>
        </dependency>
        <!-- Pooling For Performance -->
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- Fun Messages -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.Revxrsal.Lamp</groupId>
            <artifactId>common</artifactId>
            <version>3.1.5</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>me.carleslc.Simple-YAML</groupId>
            <artifactId>Simple-Yaml</artifactId>
            <version>1.8.3</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <parent>
        <groupId>net.tnemc</groupId>
        <artifactId>TNE</artifactId>
        <version>0.1.2.0-Pre-16</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <build>
        <defaultGoal>clean package</defaultGoal>
        <directory>target</directory>
        <outputDirectory>target/classes</outputDirectory>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <testOutputDirectory>target/test-classes</testOutputDirectory>
        <sourceDirectory>src/</sourceDirectory>
        <resources>
            <resource>
                <directory>resources/</directory>
                <targetPath>../</targetPath>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <outputDirectory>${project.build.outputDirectory}\resources</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <show>public</show>
                    <failOnError>false</failOnError>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.3.1-SNAPSHOT</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <dependencyReducedPomLocation>${project.build.directory}/dependency-reduced-pom.xml</dependencyReducedPomLocation>
                    <artifactSet>
                        <includes>
                            <include>org.json.simple:*</include>
                            <include>net.tnemc:*</include>
                            <include>com.zaxxer:*</include>
                            <include>org.yaml:*</include>
                            <include>me.carleslc.Simple-YAML:*</include>
                            <include>co.aikar:*</include>
                            <include>cloud.commandframework:*</include>
                            <include>com.github.Revxrsal.Lamp:*</include>
                            <include>net.kyori:*</include>
                        </includes>
                    </artifactSet>
                    <relocations>
                    </relocations>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
